--- a/projects.html
+++ b/projects.html
@@ -90,9 +90,9 @@
                         </div>
                         <div class="project-content">
                             <h3>ToDoApp</h3>
-                            <p>ToDoアプリ。</p>
+                            <p>Slack通期機能付きToDoアプリ。</p>
                             <p>MySQLを使用して、データを保存します。</p>
-                            <p>初めてMySQL、Spring Securityを使用したアプリです。</p>
+                            <p>初めてMySQL、Spring Security,Slcak APIを使用したアプリです。</p>
                             <p>製作期間：約3週間</p>
                             <div class="project-tags">
                                 <span class="tag">Java</span>
