--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
                     <div class="project-card">
                         <div class="project-image">
                             <iframe 
-                            src="https://www.youtube.com/embed/OP3UY1R2W88" 
+                            src="https://www.youtube.com/watch?v=G6NWq4E_LjY"
                             title="RockPaperScissorsGame"
                             frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -112,7 +112,7 @@
                     <div class="project-card">
                         <div class="project-image">
                             <iframe 
-                                src="https://www.youtube.com/embed/G6NWq4E_LjY" 
+                                src="https://www.youtube.com/embed/rxS9iIWN-ac" 
                                 title="RockPaperScissorsGame"
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
