--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="project-content">
                             <h3>ToDoApp</h3>
-                            <p>Slack通期機能付きToDoアプリ。</p>
+                            <p>Slack通知機能付きToDoアプリ。</p>
                             <p>MySQLを使用して、データを保存します。</p>
                             <p>初めてMySQL、Spring Security,Slcak APIを使用したアプリです。</p>
                             <p>製作期間：約3週間</p>
