--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                     <div class="project-card">
                         <div class="project-image">
                             <iframe 
-                                src="" 
+                                src="https://www.youtube.com/embed/tJ0yqV-DuGs" 
                                 title="BloomShopSystem Demo"
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -61,7 +61,8 @@
                             <h3>BloomShopSystem</h3>
                             <p>花屋の業務管理システム。</p>
                             <p>商品管理、在庫管理、注文処理機能、Excel出力機能を備えたWebアプリケーションです。</p>
-                            <p>AI駆動開発を取り入れ、システムを知人のご家族に実際に利用いただき、要望をもとに改善を繰り返しています。</p>
+                            <p>友人の親御さんから開発を依頼され、AI駆動開発を取り入れながら実際に利用いただき、要望をもとに改善を繰り返しています。</p>
+                            <p>製作期間：約1ヵ月〜</p>
                             <div class="project-tags">
                                 <span class="tag">Java</span>
                                 <span class="tag">Spring Boot</span>
