--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                             <h3>BloomShopSystem</h3>
                             <p>花屋の業務管理システム。</p>
                             <p>商品管理、在庫管理、注文処理機能、Excel出力機能を備えたWebアプリケーションです。</p>
-                            <p>会社経営をしている友人の親御さんから開発を依頼され、AI駆動開発を取り入れながら実際に利用いただき、要望をもとに改善を繰り返しています。</p>
+                            <p>花屋を経営している友人の親御さんから開発を依頼され、AI駆動開発を取り入れながら実際に利用いただき、要望をもとに改善を繰り返しています。</p>
                             <p>製作期間：約1ヵ月〜</p>
                             <div class="project-tags">
                                 <span class="tag">Java</span>
