レスポンシブ修正

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="center-title">
         <h1 class="main-title" id="mainTitle">My Portfolio</h1>
         <p class="sub-title" id="subTitle">Koki Hayashi</p>
+        <div class="scroll-hint" id="scrollHint">scroll</div>
         <div class="title-glow"></div>
     </div>
 
