--- a/projects.html
+++ b/projects.html
@@ -71,11 +71,11 @@
                                 <span class="tag">IntelliJ</span>
                                 <span class="tag">Claude code</span>
                             </div>
-                            <div class="project-links">
+                            <!-- <div class="project-links">
                                 <a href="https://github.com/hayashikkk/BloomShopSystem" target="_blank" rel="noopener noreferrer" class="project-link">
                                     <i class="fab fa-github"></i> GitHub
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
