プロジェクト実装

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <!-- 幻想的なアニメーション背景 -->
+    <!-- アニメーション背景 -->
     <div class="fantasy-background">
         <div class="aurora"></div>
         <div class="stars"></div>
@@ -50,13 +50,48 @@
                     <div class="project-card">
                         <div class="project-image">
                             <iframe 
-                                src="https://www.youtube.com/embed/tJ0yqV-DuGs" 
+                                src="https://www.youtube.com/embed/jXDq9lnpxr8" 
                                 title="BloomShopSystem Demo"
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                 allowfullscreen>
                             </iframe>
                         </div>
+
+                        <div class="project-content">
+                            <h3>Mini Product Management System</h3>
+                            <p>簡易在庫管理システム。</p>
+                            <p>商品管理、在庫管理を実装したWebアプリケーションです。</p>
+                            <p>初めてのPHP学習のアウトプット用に作成しました。</p>
+                            <p>XAMPP環境の構築からPHPの記述方法を体系的に学習しました。</p>
+                            <p>製作期間：約3日</p>
+                            <div class="project-tags">
+                                <span class="tag">PHP</span>
+                                <span class="tag">Laravel</span>
+                                <span class="tag">MySQL</span>
+                                <span class="tag">XAMPP</span>
+                                <span class="tag">Cursor</span>
+                                <span class="tag">Claude code</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://github.com/hayashikkk/mini-product-management-system" target="_blank" rel="noopener noreferrer" class="project-link">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-image">
+                            <iframe 
+                            src="https://www.youtube.com/embed/tJ0yqV-DuGs"
+                            title="RockPaperScissorsGame"
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                            </iframe>
+                        </div>
+
                         <div class="project-content">
                             <h3>BloomShopSystem</h3>
                             <p>花屋の業務管理システム。</p>
@@ -71,11 +106,6 @@
                                 <span class="tag">IntelliJ</span>
                                 <span class="tag">Claude code</span>
                             </div>
-                            <!-- <div class="project-links">
-                                <a href="https://github.com/hayashikkk/BloomShopSystem" target="_blank" rel="noopener noreferrer" class="project-link">
-                                    <i class="fab fa-github"></i> GitHub
-                                </a>
-                            </div> -->
                         </div>
                     </div>
 
