カテゴリ追加

--- a/about.html
+++ b/about.html
@@ -80,6 +80,8 @@
                                 <span class="skill-tag">CSS</span>
                                 <span class="skill-tag">JavaScript</span>
                                 <span class="skill-tag">Spring Boot</span>
+                                <span class="skill-tag">PHP</span>
+                                <span class="skill-tag">Laravel</span>
                             </div>
                         </div>
 
@@ -91,6 +93,8 @@
                                 <span class="skill-tag">VS Code</span>
                                 <span class="skill-tag">Eclipse</span>
                                 <span class="skill-tag">IntelliJ</span>
+                                <span class="skill-tag">Cursor</span>
+                                <span class="skill-tag">XAMPP</span>
                                 <span class="skill-tag">MySQL</span>
                                 <span class="skill-tag">Claude</span>
                             </div>
