--- a/about.html
+++ b/about.html
@@ -76,27 +76,31 @@
                             <div class="skill-tags">
                                 <span class="skill-tag">Java</span>
                                 <span class="skill-tag">Python</span>
+                                <span class="skill-tag">PHP</span>
                                 <span class="skill-tag">HTML</span>
                                 <span class="skill-tag">CSS</span>
                                 <span class="skill-tag">JavaScript</span>
                                 <span class="skill-tag">Spring Boot</span>
-                                <span class="skill-tag">PHP</span>
                                 <span class="skill-tag">Laravel</span>
+                                <span class="skill-tag">AWS</span>
                             </div>
                         </div>
 
                         <div class="skill-category">
                             <h3>開発環境・ツール</h3>
                             <div class="skill-tags">
-                                <span class="skill-tag">Git</span>
-                                <span class="skill-tag">GitHub</span>
+                                <span class="skill-tag">Git/GitHub</span>
                                 <span class="skill-tag">VS Code</span>
                                 <span class="skill-tag">Eclipse</span>
                                 <span class="skill-tag">IntelliJ</span>
                                 <span class="skill-tag">Cursor</span>
                                 <span class="skill-tag">XAMPP</span>
                                 <span class="skill-tag">MySQL</span>
-                                <span class="skill-tag">Claude</span>
+                                <span class="skill-tag">MariaDB</span>
+                                <span class="skill-tag">Node.js</span>
+                                <span class="skill-tag">Docker</span>
+                                <span class="skill-tag">AWS EC2/Route53</span>
+                                <span class="skill-tag">Claude Code</span>
                             </div>
                         </div>
 
@@ -108,6 +112,7 @@
                                 <span class="skill-tag">学習意欲</span>
                                 <span class="skill-tag">問題解決</span>
                                 <span class="skill-tag">サポート精神</span>
+                                <span class="skill-tag">自走力</span>
                             </div>
                         </div>
                     </div>
