--- a/projects.html
+++ b/projects.html
@@ -68,10 +68,12 @@
                             <div class="project-tags">
                                 <span class="tag">PHP</span>
                                 <span class="tag">Laravel</span>
-                                <span class="tag">MySQL</span>
+                                <span class="tag">MariaDB</span>
                                 <span class="tag">XAMPP</span>
                                 <span class="tag">Cursor</span>
                                 <span class="tag">Claude code</span>
+                                <span class="tag">AWS EC2</span>
+                                <span class="tag">Docker</span>
                             </div>
                             <div class="project-links">
                                 <a href="https://github.com/hayashikkk/mini-product-management-system" target="_blank" rel="noopener noreferrer" class="project-link">
